[workspace]
members = ["aoc", "aoc-2022", "aoc-2023", "common"]
resolver = "2"

[workspace.package]
authors = ["creberust"]
readme = "README.md"
repository = "https://github.com/creberust/advent-of-code"
license-file = "LICENSE"
keywords = ["adventofcode"]
publish = false

[workspace.dependencies]
log = "0.4.20"
