[package]
name = "aoc-2015"
version = "0.4.0"
edition = "2021"
authors.workspace = true
description = "Advent of Code library for the 2015 puzzles"
readme.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
common = { version = "0.1.0", path = "../common" }
md-5 = "0.10.5"
