[package]
name = "aoc"
version = "0.1.0"
edition = "2021"
authors.workspace = true
description = "Advent of Code binary that launch the exercices for all the years"
readme.workspace = true
repository.workspace = true
license-file.workspace = true
keywords.workspace = true
publish.workspace = true

[dependencies]
clap = { version = "4.1.8", features = ["derive"] }
